--- a/0x03-React_component/task_1/dashboard/src/App/App.css
+++ b/0x03-React_component/task_1/dashboard/src/App/App.css
@@ -1,15 +1,6 @@
-*, *::after, *::before {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 .App {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-}
-
-.App-body {
-  padding-left: 3rem;
-  padding-top: 3rem;
+  height: 100vh;
+  max-width: 100vw;
+  position: relative;
+  font-family: Arial, Helvetica, sans-serif;
 }
